Branched to CV_check

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,37 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Master branch. Will diverge from this branch when want to try something new."
+    "Check how does scikit learn gridsearch CV work."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTest_data.ipynb\n",
-      "\tTitanic.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git checkout 'feat2/wip'\n",
-    "git fetch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -50,25 +25,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 677e30f] Finished testing with adding features for test set\n",
-      " 1 file changed, 28 insertions(+), 19 deletions(-)\n"
+      "* CV_check\n",
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "  master\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch CV_check\n",
+      "Untracked files:\n",
+      "\t.ipynb_checkpoints/\n",
+      "\tLoad_and_Test.txt\n",
+      "\tParameter_Gridsearch_V1.txt\n",
+      "\tTrain_Test_Concat.txt\n",
+      "\tTrain_test_concat_for_testingfile.txt\n",
+      "\tXgboost Tutorial.ipynb\n",
+      "\tcost1-feat1.sav\n",
+      "\tcost1-feat2.sav\n",
+      "\tcost1.sav\n",
+      "\tfeat1-score1.sav\n",
+      "\tfeat1.sav\n",
+      "\tfeat2-score1.sav\n",
+      "\tfeat2.sav\n",
+      "\tfeat2_test.csv\n",
+      "\tfeat3.sav\n",
+      "\tfeat4.sav\n",
+      "\tfeat5.sav\n",
+      "\tgender_submission.csv\n",
+      "\tmaster.sav\n",
+      "\ttest.csv\n",
+      "\ttrain.csv\n",
+      "\n",
+      "nothing added to commit but untracked files present\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   f6e5f5c..677e30f  master -> master\n"
+      "fatal: The current branch CV_check has no upstream branch.\n",
+      "To push the current branch and set the remote as upstream, use\n",
+      "\n",
+      "    git push --set-upstream origin CV_check\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
-    "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Finished testing with adding features for test set'\n",
-    "git push"
+    "git commit -m 'Branched to CV_check'\n",
+    "git push --set-sp"
    ]
   },
   {
