Branched to CV_check

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -87,41 +87,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: unknown switch `s'\n",
-      "usage: git push [<options>] [<repository> [<refspec>...]]\n",
+      "fatal: 'CV_check' does not appear to be a git repository\n",
+      "fatal: Could not read from remote repository.\n",
       "\n",
-      "    -v, --verbose         be more verbose\n",
-      "    -q, --quiet           be more quiet\n",
-      "    --repo <repository>   repository\n",
-      "    --all                 push all refs\n",
-      "    --mirror              mirror all refs\n",
-      "    -d, --delete          delete refs\n",
-      "    --tags                push tags (can't be used with --all or --mirror)\n",
-      "    -n, --dry-run         dry run\n",
-      "    --porcelain           machine-readable output\n",
-      "    -f, --force           force updates\n",
-      "    --force-with-lease[=<refname>:<expect>]\n",
-      "                          require old value of ref to be at this value\n",
-      "    --recurse-submodules[=<check|on-demand|no>]\n",
-      "                          control recursive pushing of submodules\n",
-      "    --thin                use thin pack\n",
-      "    --receive-pack <receive-pack>\n",
-      "                          receive pack program\n",
-      "    --exec <receive-pack>\n",
-      "                          receive pack program\n",
-      "    -u, --set-upstream    set upstream for git pull/status\n",
-      "    --progress            force progress reporting\n",
-      "    --prune               prune locally removed refs\n",
-      "    --no-verify           bypass pre-push hook\n",
-      "    --follow-tags         push missing but relevant tags\n",
-      "    --signed[=<yes|no|if-asked>]\n",
-      "                          GPG sign the push\n",
-      "    --atomic              request atomic transaction on remote side\n",
-      "    -o, --push-option <server-specific>\n",
-      "                          option to transmit\n",
-      "    -4, --ipv4            use IPv4 addresses only\n",
-      "    -6, --ipv6            use IPv6 addresses only\n",
-      "\n"
+      "Please make sure you have the correct access rights\n",
+      "and the repository exists.\n"
      ]
     }
    ],
