--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -56,31 +56,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch CV_check\n",
-      "Untracked files:\n",
-      "\t.ipynb_checkpoints/\n",
-      "\tLoad_and_Test.txt\n",
-      "\tParameter_Gridsearch_V1.txt\n",
-      "\tTrain_Test_Concat.txt\n",
-      "\tTrain_test_concat_for_testingfile.txt\n",
-      "\tXgboost Tutorial.ipynb\n",
-      "\tcost1-feat1.sav\n",
-      "\tcost1-feat2.sav\n",
-      "\tcost1.sav\n",
-      "\tfeat1-score1.sav\n",
-      "\tfeat1.sav\n",
-      "\tfeat2-score1.sav\n",
-      "\tfeat2.sav\n",
-      "\tfeat2_test.csv\n",
-      "\tfeat3.sav\n",
-      "\tfeat4.sav\n",
-      "\tfeat5.sav\n",
-      "\tgender_submission.csv\n",
-      "\tmaster.sav\n",
-      "\ttest.csv\n",
-      "\ttrain.csv\n",
-      "\n",
-      "nothing added to commit but untracked files present\n"
+      "[CV_check 61bb093] Branched to CV_check\n",
+      " 1 file changed, 5 insertions(+), 35 deletions(-)\n"
      ]
     },
     {
