Branched to CV_check

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -56,15 +56,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV_check 61bb093] Branched to CV_check\n",
-      " 1 file changed, 5 insertions(+), 35 deletions(-)\n"
+      "[CV_check 42202b8] Branched to CV_check\n",
+      " 1 file changed, 4 insertions(+), 27 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: 'CV_check' does not appear to be a git repository\n",
+      "fatal: 'CVcheck' does not appear to be a git repository\n",
       "fatal: Could not read from remote repository.\n",
       "\n",
       "Please make sure you have the correct access rights\n",
@@ -76,7 +76,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git commit -m 'Branched to CV_check'\n",
-    "git push --set-upstream CV_check"
+    "git push --set-upstream CVcheck"
    ]
   },
   {
