Branched to CV_check

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -56,8 +56,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV_check 42202b8] Branched to CV_check\n",
-      " 1 file changed, 4 insertions(+), 27 deletions(-)\n"
+      "On branch CV_check\n",
+      "Untracked files:\n",
+      "\t.ipynb_checkpoints/\n",
+      "\tLoad_and_Test.txt\n",
+      "\tParameter_Gridsearch_V1.txt\n",
+      "\tTrain_Test_Concat.txt\n",
+      "\tTrain_test_concat_for_testingfile.txt\n",
+      "\tXgboost Tutorial.ipynb\n",
+      "\tcost1-feat1.sav\n",
+      "\tcost1-feat2.sav\n",
+      "\tcost1.sav\n",
+      "\tfeat1-score1.sav\n",
+      "\tfeat1.sav\n",
+      "\tfeat2-score1.sav\n",
+      "\tfeat2.sav\n",
+      "\tfeat2_test.csv\n",
+      "\tfeat3.sav\n",
+      "\tfeat4.sav\n",
+      "\tfeat5.sav\n",
+      "\tgender_submission.csv\n",
+      "\tmaster.sav\n",
+      "\ttest.csv\n",
+      "\ttrain.csv\n",
+      "\n",
+      "nothing added to commit but untracked files present\n"
      ]
     },
     {
@@ -76,7 +99,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git commit -m 'Branched to CV_check'\n",
-    "git push --set-upstream CVcheck"
+    "git push --set-upstream 'CV_check'"
    ]
   },
   {
