Branched to CV_check

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -87,11 +87,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: 'CVcheck' does not appear to be a git repository\n",
-      "fatal: Could not read from remote repository.\n",
+      "fatal: The current branch CV_check has no upstream branch.\n",
+      "To push the current branch and set the remote as upstream, use\n",
       "\n",
-      "Please make sure you have the correct access rights\n",
-      "and the repository exists.\n"
+      "    git push --set-upstream origin CV_check\n",
+      "\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git commit -m 'Branched to CV_check'\n",
-    "git push --set-upstream 'CV_check'"
+    "git push --set-upstream origin CV_check"
    ]
   },
   {
