Added some markdown

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "### feat5\n",
     "Evaluate dropping name and passengerID feature on randomforest feature importance evaluation.\n",
-    "Threshold cutoff of 0.001. Accuracy as eval metric."
+    "Threshold cutoff of 0.001. Accuracy as eval metric.\n",
+    "#### Considering visiting this branch again when complete heavy EDA"
    ]
   },
   {
@@ -43,7 +44,7 @@
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout -b 'feat6/wip'"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finished testing'\n",
+    "git commit -m 'Added some markdown'\n",
     "git push --set-upstream origin feat5/wip"
    ]
   },
