Branched to feat6, added some markdown

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,15 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### feat5\n",
-    "Evaluate dropping name and passengerID feature on randomforest feature importance evaluation.\n",
-    "Threshold cutoff of 0.001. Accuracy as eval metric.\n",
-    "#### Considering visiting this branch again when complete heavy EDA"
+    "### feat6\n",
+    "On top of dropping name and passengerId this branch will drop cabin as well (seems trivial)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -28,6 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  CV_check\n",
       "  cost1/feat1/wip\n",
       "  cost1/feat2/wip\n",
       "  cost1/wip\n",
@@ -37,27 +36,46 @@
       "  feat2/wip\n",
       "  feat3/wip\n",
       "  feat4/wip\n",
-      "* feat5/wip\n",
+      "  feat5/wip\n",
+      "* feat6/wip\n",
       "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'feat6/wip'"
+    "git branch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[feat5/wip 01d01bc] Added some markdown\n",
+      " 1 file changed, 4 insertions(+), 3 deletions(-)\n",
+      "Branch feat5/wip set up to track remote branch feat5/wip from origin.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      "   4163661..01d01bc  feat5/wip -> feat5/wip\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added some markdown'\n",
+    "git commit -m 'Branched to feat6, added some markdown'\n",
     "git push --set-upstream origin feat5/wip"
    ]
   },
