Finished testing, pre branch to feat2

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -17,39 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  CV_check\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "* feat6/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'feat2/wip'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -58,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat6/wip 2fc3148] Modified some code for training\n",
-      " 1 file changed, 187 insertions(+), 177 deletions(-)\n",
+      "[feat6/wip c5b1212] Finished testing\n",
+      " 1 file changed, 1372 insertions(+), 1381 deletions(-)\n",
       "Branch feat5/wip set up to track remote branch feat5/wip from origin.\n"
      ]
     },
@@ -74,7 +66,7 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finished testing'\n",
+    "git commit -m 'Finished testing, pre branch to feat2'\n",
     "git push --set-upstream origin feat5/wip"
    ]
   },
