Modified code for testing and creating submission file

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -37,12 +37,12 @@
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,8 +51,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip dd6aff5] Finished testing and creating submission file\n",
-      " 1 file changed, 36 insertions(+), 24 deletions(-)\n",
+      "[feat6/wip de6041a] Branched to feat6\n",
+      " 1 file changed, 968 insertions(+)\n",
+      " create mode 100644 Test_data.ipynb\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -60,15 +61,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   70bc728..dd6aff5  feat2/wip -> feat2/wip\n"
+      "Everything up-to-date\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Branched to feat6'\n",
+    "git commit -m 'Modified code for testing and creating submission file'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
@@ -80,8 +80,8 @@
    },
    "outputs": [],
    "source": [
-    "model_ver = 'feat2.sav'\n",
-    "submission_name = 'feat2_test.csv'"
+    "model_ver = 'feat6.sav'\n",
+    "submission_name = 'feat6_test.csv'"
    ]
   },
   {
@@ -466,8 +466,10 @@
     "#Make sure the same thins is applied to train and test data.\n",
     "train = train.drop('PassengerId',axis=1)\n",
     "train = train.drop('Name',axis=1)\n",
+    "train = train.drop('Cabin',axis=1)\n",
     "test = test.drop('PassengerId',axis=1)\n",
     "test = test.drop('Name',axis=1)\n",
+    "test = test.drop('Cabin',axis=1)\n",
     "\n",
     "num_attri = ['Age','SibSp','Parch','Fare']\n",
     "#cat_attri = [column for column in test if (column not in num_attri and column != 'Survived')]\n",
