Need to train feat6 model again, previous version is wrong

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -44,8 +44,7 @@
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'feat2/wip'\n",
-    "git fetch"
+    "git branch"
    ]
   },
   {
@@ -76,7 +75,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git add Test_data.ipynb\n",
-    "git commit -m 'Code still got problem, branched back to feat2'\n",
+    "git commit -m 'Need to train feat6 model again, previous version is wrong'\n",
     "git push --set-upstream origin feat5/wip"
    ]
   },
@@ -406,45 +405,6 @@
     }
    ],
    "source": [
-    "X.isnull().any()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So Age,Cabin and Embarked have NaN value. Drop the missing value rows."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Survived    False\n",
-       "Pclass      False\n",
-       "Sex         False\n",
-       "Age         False\n",
-       "SibSp       False\n",
-       "Parch       False\n",
-       "Ticket      False\n",
-       "Fare        False\n",
-       "Embarked    False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X = X.dropna()\n",
     "X.isnull().any()"
    ]
   },
