Created submission file, submitted to kaggle.

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -241,8 +241,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat6/wip 60a3467] Modified code for testing and creating submission file\n",
-      " 1 file changed, 11 insertions(+), 9 deletions(-)\n",
+      "[feat6/wip 29a0667] Created submission file\n",
+      " 1 file changed, 1192 insertions(+), 957 deletions(-)\n",
+      " rewrite Test_data.ipynb (68%)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
