--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -17,15 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "commit 2fa43b773f01df263cd4a4074f2c42c124769c54\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Mon Jan 8 19:34:23 2018 +0700\n",
+      "\n",
+      "    Finished training, need to test with test set\n",
+      "\n",
       "commit df83b1dbfcf3f8ef08547cb4458e8cc77a6199f8\n",
       "Author: Theerit <Theerit.L@gmail.com>\n",
       "Date:   Wed Jan 3 13:54:25 2018 +0700\n",
@@ -228,12 +234,13 @@
    ],
    "source": [
     "%%bash\n",
-    "git log"
+    "git checkout 'master'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -242,8 +249,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat6/wip df83b1d] Need to train feat6 model again, previous version is wrong\n",
-      " 1 file changed, 3 insertions(+), 43 deletions(-)\n",
+      "[feat6/wip 2fa43b7] Finished training, need to test with test set\n",
+      " 2 files changed, 1506 insertions(+), 1477 deletions(-)\n",
       "Branch feat5/wip set up to track remote branch feat5/wip from origin.\n"
      ]
     },
@@ -259,7 +266,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git add Test_data.ipynb\n",
-    "git commit -m 'Finished training, need to test with test set'\n",
+    "git commit -m 'Created submission file, submitted to kaggle.'\n",
     "git push --set-upstream origin feat5/wip"
    ]
   },
