Branched to feat 7

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "  CV_check\n",
-      "* EDA1/wip\n",
+      "  EDA1/wip\n",
       "  cost1/feat1/wip\n",
       "  cost1/feat2/wip\n",
       "  cost1/wip\n",
@@ -53,6 +53,7 @@
       "  feat4/wip\n",
       "  feat5/wip\n",
       "  feat6/wip\n",
+      "* feat7(EDA1)/wip\n",
       "  master\n"
      ]
     }
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -73,8 +74,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[EDA1/wip 41eb6cb] Finised embarked feature analysis, fill Nan with \"S\"\n",
-      " 1 file changed, 310 insertions(+), 224 deletions(-)\n",
+      "[EDA1/wip 3512d83] Added some summary description at the head of the notebook\n",
+      " 1 file changed, 448 insertions(+), 434 deletions(-)\n",
       "Branch EDA1/wip set up to track remote branch EDA1/wip from origin.\n"
      ]
     },
@@ -83,15 +84,15 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   1ecd7d8..41eb6cb  EDA1/wip -> EDA1/wip\n"
+      "   e5ff23e..3512d83  EDA1/wip -> EDA1/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
-    "git commit -m 'Added some summary description at the head of the notebook'\n",
-    "git push --set-upstream origin EDA1/wip"
+    "git commit -m 'Branched to feat 7'\n",
+    "git push --set-upstream origin feat7(EDA1)/wip"
    ]
   },
   {
