Branched to feat 7

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -74,17 +74,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[EDA1/wip 3512d83] Added some summary description at the head of the notebook\n",
-      " 1 file changed, 448 insertions(+), 434 deletions(-)\n",
-      "Branch EDA1/wip set up to track remote branch EDA1/wip from origin.\n"
+      "[feat7(EDA1)/wip 1ea75cc] Branched to feat 7\n",
+      " 1 file changed, 9 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   e5ff23e..3512d83  EDA1/wip -> EDA1/wip\n"
+      "bash: line 3: syntax error near unexpected token `('\n",
+      "bash: line 3: `git push --set-upstream origin feat7(EDA1)/wip'\n"
      ]
     }
    ],
@@ -92,7 +91,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git commit -m 'Branched to feat 7'\n",
-    "git push --set-upstream origin feat7(EDA1)/wip"
+    "git push --set-upstream origin 'feat7(EDA1)/wip'"
    ]
   },
   {
