--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -20,265 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "commit 3f90accc38eac38b624ffaa76ba7e63e4daeb0a6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Mar 4 14:09:04 2018 +0700\n",
-      "\n",
-      "    Branched to feat 7\n",
-      "\n",
-      "commit 1ea75cc4473b28c82c1ded12577bf36928adafeb\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Mar 4 14:08:55 2018 +0700\n",
-      "\n",
-      "    Branched to feat 7\n",
-      "\n",
-      "commit 3512d839d2c7a4eaa9bdafa5b32ddd6d90314572\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Mar 4 13:52:49 2018 +0700\n",
-      "\n",
-      "    Added some summary description at the head of the notebook\n",
-      "\n",
-      "commit e5ff23e4cc9a5a7d536bea22943fd79372b86b8a\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sat Mar 3 11:03:51 2018 +0700\n",
-      "\n",
-      "    Finised on EDA part of the workbook\n",
-      "\n",
-      "commit 41bb00d1bd6d452b7b9f78c92ad5edbed74b341c\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Thu Mar 1 19:25:59 2018 +0700\n",
-      "\n",
-      "    Working on SibSp and Parch\n",
-      "\n",
-      "commit 41eb6cb187193719c2712c70c6ae60e9e7631819\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Thu Mar 1 18:06:35 2018 +0700\n",
-      "\n",
-      "    Finised embarked feature analysis, fill Nan with \"S\"\n",
-      "\n",
-      "commit 1ecd7d889b8e400716efa2a60369947a806063c6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Mon Feb 26 19:40:35 2018 +0700\n",
-      "\n",
-      "    Working on embarking variable\n",
-      "\n",
-      "commit 4c9975c160497288f9f55ebdca3018e52a8b0845\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Mon Feb 26 19:33:47 2018 +0700\n",
-      "\n",
-      "    Assigning age to Nan age values based on initials(fix)\n",
-      "\n",
-      "commit 0f57c9bf5d76bb213f99e934141afc611a3ab503\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Mon Feb 26 19:05:57 2018 +0700\n",
-      "\n",
-      "    Assigning age to Nan age values based on initials\n",
-      "\n",
-      "commit 440293f903bf21385cd52f82bbafe0149469fe52\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Feb 25 19:41:37 2018 +0700\n",
-      "\n",
-      "    Working on assigning age from initials\n",
-      "\n",
-      "commit 74174be7f584f1b93f15df2d9b35d674bead4cef\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Feb 25 19:11:18 2018 +0700\n",
-      "\n",
-      "    Finished working on Pclass vs Sex (EDA)\n",
-      "\n",
-      "commit c464b7ff024b822da088682b16067f4be3bb3cc3\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Feb 25 18:52:41 2018 +0700\n",
-      "\n",
-      "    Working on Pclass feature analyze (EDA)\n",
-      "\n",
-      "commit acc2c922ad69e0b92ad4e3ab2949463ef7469e2a\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Jan 14 16:36:51 2018 +0700\n",
-      "\n",
-      "    Working on sex feature analyze\n",
-      "\n",
-      "commit b3afd2b96e8af1eb9e6f2fc6ced9af81dcc0f062\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Jan 14 16:20:26 2018 +0700\n",
-      "\n",
-      "    Added pie plot for survived/not survived\n",
-      "\n",
-      "commit eaca834745fe3e0da2d6574dcf4f847fc5573195\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Dec 26 17:37:45 2017 +0700\n",
-      "\n",
-      "    Finished testing with adding features for test set\n",
-      "\n",
-      "commit 677e30fae7354fab55c7d9b97712fcafee0c8353\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Dec 26 17:36:55 2017 +0700\n",
-      "\n",
-      "    Finished testing with adding features for test set\n",
-      "\n",
-      "commit f6e5f5ccf83e9660756e6a21441b91565b07fbf6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 24 12:03:32 2017 +0700\n",
-      "\n",
-      "    Appears that master branch cannot submit test\n",
-      "\n",
-      "commit fe3cf15d2075cc1e0a783d45131ad6de65f8bd68\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 24 11:58:05 2017 +0700\n",
-      "\n",
-      "    Finished testing with adding features for test set\n",
-      "\n",
-      "commit a926d183b0e492958321918a5e8e21c80d1ccad0\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 24 11:37:08 2017 +0700\n",
-      "\n",
-      "    Modified some code to fix non-matched features problem\n",
-      "\n",
-      "commit 61cd36e15fd34de63d47978590d72333e3167832\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 24 10:41:47 2017 +0700\n",
-      "\n",
-      "    Branched to feat2\n",
-      "\n",
-      "commit 577c0eeb6d56882e419079ad5944673eed25bbe7\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 24 10:41:09 2017 +0700\n",
-      "\n",
-      "    Branched to feat2\n",
-      "\n",
-      "commit 499bd470a1d3b47a9314917e9925b55f3045b9e6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 24 10:39:41 2017 +0700\n",
-      "\n",
-      "    Preparing to branch to feat2 branch\n",
-      "\n",
-      "commit 9a1a20148353c1ef9bee29dd9b01d9e46b1fad38\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Fri Dec 22 16:15:45 2017 +0700\n",
-      "\n",
-      "    Modified some code\n",
-      "\n",
-      "commit 7e72225880680cb2a0b45a98c0fc867697a8132f\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Fri Dec 22 15:22:43 2017 +0700\n",
-      "\n",
-      "    Modified some code\n",
-      "\n",
-      "commit fe7a857e04595282a57c913e66ec34fd232d30b3\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Thu Dec 21 18:08:42 2017 +0700\n",
-      "\n",
-      "    Added some code\n",
-      "\n",
-      "commit 1fa90a9bdb5e7714500eebd4852b5722eb729b2f\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Thu Dec 21 17:59:09 2017 +0700\n",
-      "\n",
-      "    Initiated this file in master branch\n",
-      "\n",
-      "commit 7b2c89f16d81a3691d4bf5912a53a8b99c3b4fe6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Mon Dec 11 10:54:15 2017 +0700\n",
-      "\n",
-      "    Added some markdown\n",
-      "\n",
-      "commit 523343957d8eecf22979cb837173e74d20c7e30f\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 10 09:31:14 2017 +0700\n",
-      "\n",
-      "    Established baseline master branch\n",
-      "\n",
-      "commit c0b39e462acc2cab3eae191decd40fe3e89cd0d1\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sat Dec 9 17:18:28 2017 +0700\n",
-      "\n",
-      "    Established baseline master branch\n",
-      "\n",
-      "commit af209b153bde452b29a53b30300858e78bcd4e30\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Fri Dec 8 17:40:38 2017 +0700\n",
-      "\n",
-      "    Implemented basic Xgboost code\n",
-      "\n",
-      "commit ed110ea0c4b932fac0c0bddace79507662032a7a\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Dec 6 17:27:29 2017 +0700\n",
-      "\n",
-      "    Adding Xgboost code\n",
-      "\n",
-      "commit fe206848a53113bb5ddb2218d511a8c28d3dd487\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Nov 22 19:57:20 2017 +0700\n",
-      "\n",
-      "    Add Feature Evaluation by random forest (sort of)\n",
-      "\n",
-      "commit cabb71aadeea692e730818440e63841a045d0e3a\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Nov 22 19:29:25 2017 +0700\n",
-      "\n",
-      "    Add dummy variables code\n",
-      "\n",
-      "commit 8b9b277f6efbeb2abb858d56567f079987f7a647\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Nov 21 19:38:34 2017 +0700\n",
-      "\n",
-      "    Add categorical count plot\n",
-      "\n",
-      "commit 0bbcea0b15b8346473ac1fc1b788255a2f07c53c\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Nov 21 19:11:38 2017 +0700\n",
-      "\n",
-      "    Solve pair plot issue (4 Numerical attributes and color by Survived Class)\n",
-      "\n",
-      "commit 0eaff2f98a83582d98631eb0f082b6b1b32eee55\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 16:08:49 2017 +0700\n",
-      "\n",
-      "    Stuck at pairplot\n",
-      "\n",
-      "commit 6eea3479df5418459a8a3d6794cf7ff2a888aec0\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 15:55:29 2017 +0700\n",
-      "\n",
-      "    Added some numerical distribution plots\n",
-      "\n",
-      "commit b5ce9e36e40bb309eca97dd73209fcbe54141cb5\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 15:33:31 2017 +0700\n",
-      "\n",
-      "    Adding some basic code from prvious working file_2\n",
-      "\n",
-      "commit 22bc8061e47a87c66ec476b49f2fad799a45692b\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 15:12:32 2017 +0700\n",
-      "\n",
-      "    Adding some basic code from prvious working file\n",
-      "\n",
-      "commit 5ac4050096e206a87fe92fc26802d02debe905b9\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sat Nov 18 14:21:38 2017 +0700\n",
-      "\n",
-      "    Starting\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git log"
+    "git checkout 'feat6/wip'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -287,9 +53,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip 2ddbd78] Dropped all EDA cells\n",
-      " 1 file changed, 2139 insertions(+), 5055 deletions(-)\n",
-      " rewrite Titanic.ipynb (85%)\n",
+      "[feat7(EDA1)/wip 8f536f1] Modified code to drop name and cabin feature\n",
+      " 1 file changed, 111 insertions(+), 91 deletions(-)\n",
       "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
      ]
     },
@@ -298,7 +63,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   3f90acc..2ddbd78  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      "   2ddbd78..8f536f1  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
      ]
     }
    ],
