Dummy commit,Just a visit to view code

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -234,7 +234,7 @@
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'master'\n",
+    "git checkout 'feat7(EDA1)/wip'\n",
     "git fetch"
    ]
   },
@@ -266,7 +266,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git add Test_data.ipynb\n",
-    "git commit -m 'Created submission file, submitted to kaggle.'\n",
+    "git commit -m 'Dummy commit,Just a visit to view code'\n",
     "git push --set-upstream origin feat5/wip"
    ]
   },
