Model ready to be trained (still not trained)

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -20,30 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 182,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  CV_check\n",
-      "  EDA1/wip\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "  feat6/wip\n",
-      "* feat7(EDA1)/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
@@ -55,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 181,
    "metadata": {
     "collapsed": false
    },
@@ -64,8 +53,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip b268a9f] Modified code to perform feature engineering to test dataframe\n",
-      " 1 file changed, 239 insertions(+), 173 deletions(-)\n",
+      "[feat7(EDA1)/wip 126d9eb] Model ready to be trained (still not trained)\n",
+      " 1 file changed, 247 insertions(+), 118 deletions(-)\n",
       "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
      ]
     },
@@ -74,7 +63,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   69c4a0e..b268a9f  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      "   b268a9f..126d9eb  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
      ]
     }
    ],
