Dummy commit,Just a visit to view code

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -17,218 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "commit 2fa43b773f01df263cd4a4074f2c42c124769c54\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Mon Jan 8 19:34:23 2018 +0700\n",
-      "\n",
-      "    Finished training, need to test with test set\n",
-      "\n",
-      "commit df83b1dbfcf3f8ef08547cb4458e8cc77a6199f8\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Jan 3 13:54:25 2018 +0700\n",
-      "\n",
-      "    Need to train feat6 model again, previous version is wrong\n",
-      "\n",
-      "commit 26a964835481a982bae2f0ee35a68f110161aa68\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Jan 3 13:49:37 2018 +0700\n",
-      "\n",
-      "    Code still got problem, branched back to feat2\n",
-      "\n",
-      "commit 60a3467dab81ac1b60112cc3ac33bba8298ac3b0\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Jan 3 13:33:39 2018 +0700\n",
-      "\n",
-      "    Modified code for testing and creating submission file\n",
-      "\n",
-      "commit de6041a7541be79b5be9e8473a16d4afffb15143\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Jan 3 13:30:21 2018 +0700\n",
-      "\n",
-      "    Branched to feat6\n",
-      "\n",
-      "commit 51f035ce098df94ea839c2820fb7401daa7d62d4\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Jan 3 13:27:47 2018 +0700\n",
-      "\n",
-      "    Finished testing, pre branch to feat2\n",
-      "\n",
-      "commit c5b12126ed84177b04c03278b83128efd7b2db8c\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 31 10:59:51 2017 +0700\n",
-      "\n",
-      "    Finished testing\n",
-      "\n",
-      "commit 2fc31485ef674cbc6817da36ab4024ec8b96d2cd\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 31 10:46:11 2017 +0700\n",
-      "\n",
-      "    Modified some code for training\n",
-      "\n",
-      "commit dc6c6855587e765dcde4d5ad0b1c7452cb5668b6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 31 10:38:49 2017 +0700\n",
-      "\n",
-      "    Branched to feat6, added some markdown\n",
-      "\n",
-      "commit 01d01bc4b12d384b66eb49c850ef3c570824d408\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 31 10:37:35 2017 +0700\n",
-      "\n",
-      "    Added some markdown\n",
-      "\n",
-      "commit 416366107ca377a4d3df3647ea82ae5ab0248c7e\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Dec 19 18:47:16 2017 +0700\n",
-      "\n",
-      "    Finished testing\n",
-      "\n",
-      "commit 3b1b4df526e4261e7656bcb4fc6845cfc0dad7c8\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 18:42:18 2017 +0700\n",
-      "\n",
-      "    Finished testing\n",
-      "\n",
-      "commit 930e9ac0e2899d1d107c884ae7144bae80ab98df\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 18:37:41 2017 +0700\n",
-      "\n",
-      "    Branched to feat5 and add markdown\n",
-      "\n",
-      "commit 2b24ef265b1da1cefa5ad604dd6268acf7c51fd1\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 18:36:40 2017 +0700\n",
-      "\n",
-      "    Finished testing\n",
-      "\n",
-      "commit d46c3e1b035c97d91833e5a76cd443aaa5d0dc7c\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 18:04:24 2017 +0700\n",
-      "\n",
-      "    Finished testing\n",
-      "\n",
-      "commit 2b8988ecc17ddeae7014641a51a9b83e049cf7a8\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 17:48:11 2017 +0700\n",
-      "\n",
-      "    Added code that will use only feature that passed threshold score\n",
-      "\n",
-      "commit 35899e64953f3d4d452ce69d1738788374419005\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 17:46:16 2017 +0700\n",
-      "\n",
-      "    Added code that will use only feature that passed threshold score\n",
-      "\n",
-      "commit c113a596451cf0aea631c61803e44096ce5d194c\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 17:32:28 2017 +0700\n",
-      "\n",
-      "    Added some markdown and branch to feat4\n",
-      "\n",
-      "commit 56a5898fb10b330e59a26ea5eb4a9c7a2aa88cb6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 17:32:19 2017 +0700\n",
-      "\n",
-      "    Added some markdown and branch to feat4\n",
-      "\n",
-      "commit c0c33c27fce81ad65d4b4cc4ab30a3e8f2558626\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 17 17:31:51 2017 +0700\n",
-      "\n",
-      "    Added some markdown and branch to feat4\n",
-      "\n",
-      "commit 7b2c89f16d81a3691d4bf5912a53a8b99c3b4fe6\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Mon Dec 11 10:54:15 2017 +0700\n",
-      "\n",
-      "    Added some markdown\n",
-      "\n",
-      "commit 523343957d8eecf22979cb837173e74d20c7e30f\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Dec 10 09:31:14 2017 +0700\n",
-      "\n",
-      "    Established baseline master branch\n",
-      "\n",
-      "commit c0b39e462acc2cab3eae191decd40fe3e89cd0d1\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sat Dec 9 17:18:28 2017 +0700\n",
-      "\n",
-      "    Established baseline master branch\n",
-      "\n",
-      "commit af209b153bde452b29a53b30300858e78bcd4e30\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Fri Dec 8 17:40:38 2017 +0700\n",
-      "\n",
-      "    Implemented basic Xgboost code\n",
-      "\n",
-      "commit ed110ea0c4b932fac0c0bddace79507662032a7a\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Dec 6 17:27:29 2017 +0700\n",
-      "\n",
-      "    Adding Xgboost code\n",
-      "\n",
-      "commit fe206848a53113bb5ddb2218d511a8c28d3dd487\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Nov 22 19:57:20 2017 +0700\n",
-      "\n",
-      "    Add Feature Evaluation by random forest (sort of)\n",
-      "\n",
-      "commit cabb71aadeea692e730818440e63841a045d0e3a\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Wed Nov 22 19:29:25 2017 +0700\n",
-      "\n",
-      "    Add dummy variables code\n",
-      "\n",
-      "commit 8b9b277f6efbeb2abb858d56567f079987f7a647\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Nov 21 19:38:34 2017 +0700\n",
-      "\n",
-      "    Add categorical count plot\n",
-      "\n",
-      "commit 0bbcea0b15b8346473ac1fc1b788255a2f07c53c\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Tue Nov 21 19:11:38 2017 +0700\n",
-      "\n",
-      "    Solve pair plot issue (4 Numerical attributes and color by Survived Class)\n",
-      "\n",
-      "commit 0eaff2f98a83582d98631eb0f082b6b1b32eee55\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 16:08:49 2017 +0700\n",
-      "\n",
-      "    Stuck at pairplot\n",
-      "\n",
-      "commit 6eea3479df5418459a8a3d6794cf7ff2a888aec0\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 15:55:29 2017 +0700\n",
-      "\n",
-      "    Added some numerical distribution plots\n",
-      "\n",
-      "commit b5ce9e36e40bb309eca97dd73209fcbe54141cb5\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 15:33:31 2017 +0700\n",
-      "\n",
-      "    Adding some basic code from prvious working file_2\n",
-      "\n",
-      "commit 22bc8061e47a87c66ec476b49f2fad799a45692b\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sun Nov 19 15:12:32 2017 +0700\n",
-      "\n",
-      "    Adding some basic code from prvious working file\n",
-      "\n",
-      "commit 5ac4050096e206a87fe92fc26802d02debe905b9\n",
-      "Author: Theerit <Theerit.L@gmail.com>\n",
-      "Date:   Sat Nov 18 14:21:38 2017 +0700\n",
-      "\n",
-      "    Starting\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
