Branched to feat7

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "## Test Data Prediction\n",
-    "### Master\n",
+    "### Feat7\n",
     "This notebook will be used to open test.csv file and use designated model to predict the test data for kaggle submission."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,6 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  CV_check\n",
+      "  EDA1/wip\n",
       "  cost1/feat1/wip\n",
       "  cost1/feat2/wip\n",
       "  cost1/wip\n",
@@ -30,7 +32,9 @@
       "  feat3/wip\n",
       "  feat4/wip\n",
       "  feat5/wip\n",
-      "* master\n"
+      "  feat6/wip\n",
+      "* feat7(EDA1)/wip\n",
+      "  master\n"
      ]
     }
    ],
@@ -68,7 +72,7 @@
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Appears that master branch cannot submit test'\n",
+    "git commit -m 'Branched to feat7'\n",
     "git push --set-upstream origin master"
    ]
   },
