Prepare code for predicting for submission file

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -11,42 +11,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  CV_check\n",
-      "  EDA1/wip\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "  feat6/wip\n",
-      "* feat7(EDA1)/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git chechout 'feat6/wip'\n",
+    "git checkout 'feat6/wip'\n",
     "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -55,8 +44,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip 8a2194b] Branched to feat7\n",
-      " 1 file changed, 8 insertions(+), 4 deletions(-)\n",
+      "[feat7(EDA1)/wip 4c24f24] Prepare code for predicting for submission file\n",
+      " 1 file changed, 528 insertions(+), 751 deletions(-)\n",
+      " rewrite Test_data.ipynb (85%)\n",
       "Branch master set up to track remote branch master from origin.\n"
      ]
     },
@@ -71,6 +61,7 @@
    "source": [
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
+    "git add 'Titanic.ipynb'\n",
     "git commit -m 'Prepare code for predicting for submission file'\n",
     "git push --set-upstream origin master"
    ]
