--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -324,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip 126d9eb] Model ready to be trained (still not trained)\n",
-      " 1 file changed, 247 insertions(+), 118 deletions(-)\n",
+      "[feat7(EDA1)/wip 4e17e8f] Finished model training moving on to creating submission file\n",
+      " 1 file changed, 638 insertions(+), 335 deletions(-)\n",
       "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
      ]
     },
@@ -334,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   b268a9f..126d9eb  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      "   62cf47e..4e17e8f  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
      ]
     }
    ],
